--- a/source/site/frontend/css/task-list.css
+++ b/source/site/frontend/css/task-list.css
@@ -47,8 +47,8 @@
 }
 
 #fold-button {
-  margin: 0;
-  padding: 0;
+  margin: 0px;
+  padding: 0px;
   width: fit-content;
   height: 10%;
   position: absolute;
@@ -60,10 +60,10 @@
   width: 100%;
   height: 5%;
   position: relative;
-  left: 0;
+  left: 0px;
   top: auto;
   margin: 2mm;
-  padding: 0;
+  padding: 0px;
 }
 
 .task-list-button {
