--- a/source/site/frontend/css/main.css
+++ b/source/site/frontend/css/main.css
@@ -5,5 +5,14 @@ body {
 
 h1 {
   color: navy;
-  margin-left: 20px;
+  margin: 0;
 }
+
+p.timer {
+  text-align: center;
+  font-size: 60px;
+  margin-top: 100px;
+}
+
+
+
