--- a/source/site/frontend/css/main.css
+++ b/source/site/frontend/css/main.css
@@ -1,17 +1,38 @@
 /* place holder */
-body {
-  background-color: lightblue;
+.background {
+  /*Image used */
+  background-image: url("../assets/images/doodle-bob-background-placeholder.jpg");
+   
+  /* Full height */
+  height: 100%;
+
+  /* Center and scale the image */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 h1 {
-  color: navy;
-  margin: 0;
+  color:white;
+  margin: 20px;
 }
 
-p.timer {
+fieldset {
+  border: none;
   text-align: center;
-  font-size: 60px;
+}
+
+.timer {
+  font-size: 300px;
   margin-top: 100px;
+  color: white;
+
+}
+
+.button {
+  font-size: 60px;
+  margin-top: 200px;
+  border: 2px solid #4CAF50; /* Green */
 }
 
 
