--- a/source/site/frontend/css/main.css
+++ b/source/site/frontend/css/main.css
@@ -1,38 +1,41 @@
 /* place holder */
 .background {
   /*Image used */
-  background-image: url("../assets/images/doodle-bob-background-placeholder.jpg");
-   
-  /* Full height */
-  height: 100%;
-
-  /* Center and scale the image */
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-image: url("../assets/images/ocean-cliffs-background-2.jfif") ;
+  
+  background-size:     cover;                      
+  background-repeat:   no-repeat;
+  background-position: center center;
 }
 
-h1 {
-  color:white;
-  margin: 20px;
-}
-
-fieldset {
-  border: none;
+div {
   text-align: center;
 }
 
-.timer {
-  font-size: 300px;
-  margin-top: 100px;
+h1 {
   color: white;
+  margin: 20px;
+  text-align: center;
+  font-size: 200%;
+}
+
+.timer {
+  font-size: 150px;
+  width: 80%x;
+  color: white;
+  background-color: gray;
+  border-radius: 5px;
+  border: 2px  solid gray;
 
 }
 
 .button {
-  font-size: 60px;
-  margin-top: 200px;
-  border: 2px solid #4CAF50; /* Green */
+  font-size: 80px;
+  border: 2px gray; 
+  border-radius: 5px;
+  background-color: gray;
+  color: white;
+
 }
 
 
