--- a/source/site/frontend/css/style.css
+++ b/source/site/frontend/css/style.css
@@ -8,9 +8,9 @@ html {
 }
 
 body {
-  font-family: 'ArialRounded', -apple-system, BlinkMacSystemFont,
-    'Segoe UI', Roboto, Helvetica, Arial, sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  font-family: "ArialRounded", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
 }
 
 footer {
@@ -30,7 +30,7 @@ footer {
   align-items: center;
 }
 
-#timer-string {
+#timer-container {
   background-color: rgba(230, 230, 230, 0.5);
   box-sizing: border-box;
   border: 2px solid black;
@@ -71,10 +71,13 @@ button {
   background-color: rgba(230, 230, 230, 0.5);
 }
 
+.control-buttons{
+  flex-direction: row;
+}
+
 #current-task {
   display: inline-block;
 }
 
 .sidebar {
-  
 }
