working shadowdom for settings page

--- a/source/site/frontend/css/timer.css
+++ b/source/site/frontend/css/timer.css
@@ -1,5 +1,6 @@
 html {
-    background: url("/assets/images/web-background.png") no-repeat center center fixed;
+    /* background: url("/assets/images/web-background.png") no-repeat center center fixed; */
+    background-color: grey;
     background-size: cover;
   }
   
