--- a/source/css/style.css
+++ b/source/css/style.css
@@ -7,10 +7,14 @@
     background-size: cover;
 }
 
+.main-page {
+    text-align: center;
+}
+
 .container {
-    background: blueviolet;
+    background: cyan;
     box-sizing: border-box;
-    border: 2px solid black;
+    border: 3px solid black;
     border-radius: 30px;
     margin: 20vh auto;
     width: 50vh;
@@ -24,16 +28,32 @@
 .timer {
     display: flex;
     flex-direction: row;
-    font-size: 30em;
-
+    font-size: 10em;
 }
 
-.buttons {
-
+#start, #finish {
+    background: cyan;
+    box-sizing: border-box;
+    border: 2px solid black;
+    border-radius: 30px;
+    margin: 5vh auto;
+    width: 20vh;
+    height: 8vh;
+    display: inline-block;
+    justify-content: center;
+    font-size: 2em;
 }
 
-.current-task {
-
+#current-task {
+    background: cyan;
+    box-sizing: border-box;
+    border: 2px solid black;
+    border-radius: 30px;
+    margin: 2vh auto;
+    width: 50vh;
+    height: 10vh;
+    display: inline-block;
+    font-size: 2em;
 }
 
 .sidebar {
