--- a/source/site/frontend/html/components/settings.html
+++ b/source/site/frontend/html/components/settings.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="/css/settings.css">
-<button id="settings-close-button" type="button" style="align-self: flex-end;", onclick="settings_close_button(document)">Close</button>
+<button onclick="current_state = state_transition(current_state, 'timer_init')">Close</button>
 <div class="tabs">
   <div class="tab-header">
     <div class="active">
