--- a/source/site/frontend/html/components/settings.html
+++ b/source/site/frontend/html/components/settings.html
@@ -110,7 +110,7 @@
             Duration of each session
           </div>
           <div class="option-control">
-            <input type='tel' name='time_3' class='ios-time-picker' />
+            <c-time-picker></c-time-picker>
           </div>
         </div>
         <div class="option-container">
@@ -118,7 +118,7 @@
             Duration of each sprint
           </div>
           <div class="option-control">
-            <input type='tel' name='time_1' class='ios-time-picker' />
+            <c-time-picker></c-time-picker>
           </div>
         </div>
       </div>
