--- a/source/site/frontend/html/components/task-list.html
+++ b/source/site/frontend/html/components/task-list.html
@@ -1,26 +1,19 @@
-<link rel="stylesheet" href="/css/task-list.css">
-<div class="side-bar" id="task-list">
-    <!-- Reference taken:
-    https://www.w3schools.com/howto/howto_css_sidebar_responsive.asp -->
-    <h2 class="side-bar-header" id="task-list-header">Task list</h2>
+<link rel="stylesheet" href="/css/task-list.css" />
+<div class="side-bar" id="side-bar">
+  <!-- Reference taken: https://www.w3schools.com/howto/howto_css_sidebar_responsive.asp-->
+  <h2 class="side-bar-header" id="task-list-header">Task list</h2>
+  <h3 class="side-bar-division" id="pending-list">Pending Tasks</h3>
 
-    <p style="color: white">Task name：</p>
-    <input id="taskNameInput" type="text" />
-    <p style="color: white">Cycles needed：</p>
-    <input id="cyclesNumInput" type="number" />
+  <ul class="side-bar-division" id="pending">
+      <li>
+          <c-task-item></c-task-item>
+      </li>
+  </ul>
+  <ul class="side-bar-division" id="finished"></ul>
 
-    <div class="side-bar-container" id="task-container">
-        <div class="side-bar-element" id="task">
-            <p class="task-description" id="task-description">Example Task</p>
-        </div>
-        <div class="side-bar-element" id="pomo-counter">
-            <p class="task-pomo-estimate" id="task-pomo-estimate">1</p>
-        </div>
-    </div>
-    <button type="button" class="task-list-button" id="fold-button" onclick="fold_task_bar(this)">
-        Extend
-    </button>
-    <button type="button" class="task-list-button" id="add-task-button" onclick="add_task_element(this)">
-        +
-    </button>
+
+  <button type="button" id="fold-button" onclick="state_transition(timer_init == window.current_state ? 'timer_toggle_task_list' : 'timer_init')">
+    Extend
+  </button>
+  <button type="button" id="add-task-button" onclick="add_task_to_pending(this)">+</button>
 </div>
