--- a/source/site/frontend/html/components/timer-display.html
+++ b/source/site/frontend/html/components/timer-display.html
@@ -2,3 +2,4 @@
 <div id="timer-container">
     <p id="timer-string">00:10</p>
 </div>
+<audio id="alarm-sound" src="../assets/audio/spongebob-screaming-alarm-placeholder.mp3" ></audio>
