--- a/source/site/frontend/css/style.css
+++ b/source/site/frontend/css/style.css
@@ -47,7 +47,7 @@ footer {
   background-color: rgba(230, 230, 230, 0.5);
   box-sizing: border-box;
   border: 2px solid black;
-  border-radius: 30px;
+  border-radius: 15px;
   box-shadow: rgba(0, 0, 0, 0.5) 2px 2px 0px;
   margin: 10vh auto;
   width: 50vh;
@@ -59,7 +59,7 @@ footer {
   font-size: 100px;
 }
 
-button {
+.control {
   border: 2px solid black;
   margin: 20px 0px 20px;
   padding: 0px 12px;
@@ -93,4 +93,63 @@ button {
 }
 
 .sidebar {
+}
+
+/* Styling for modal*/
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  border-radius: 15px;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 70%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* Cancel and Confirm buttons */
+#emergency-stop-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+#confirm-button,
+#cancel-button {
+  margin: 0px 20px;
+  border-radius: 4px;
+  height: 35px;
+  font-weight: bold;
+  width: 100px;
+  background-color: rgba(230, 230, 230, 0.5);
+  flex-direction: row;
 }
