--- a/source/site/frontend/css/style.css
+++ b/source/site/frontend/css/style.css
@@ -8,15 +8,22 @@ html {
 }
 
 body {
-  font-family: "ArialRounded", -apple-system, BlinkMacSystemFont, "Segoe UI",
-    Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+  font-family:
+    "ArialRounded",
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Helvetica,
+    Arial,
+    sans-serif,
+    "Apple Color Emoji",
+    "Segoe UI Emoji",
     "Segoe UI Symbol";
 }
 
 /* style links */
-a {
-
-}
+a {}
 
 footer {
   position: fixed;
@@ -35,20 +42,16 @@ footer {
   align-items: center;
 }
 
-#early-prompt {
+#early-prompt {}
 
-}
-
-#timer-label {
-
-}
+#timer-label {}
 
 #timer-container {
   background-color: rgba(230, 230, 230, 0.5);
   box-sizing: border-box;
   border: 2px solid black;
   border-radius: 15px;
-  box-shadow: rgba(0, 0, 0, 0.5) 2px 2px 0px;
+  box-shadow: rgba(0, 0, 0, 0.5) 2px 2px 0;
   margin: 10vh auto;
   width: 50vh;
   height: 25vh;
@@ -61,10 +64,10 @@ footer {
 
 .control {
   border: 2px solid black;
-  margin: 20px 0px 20px;
-  padding: 0px 12px;
+  margin: 20px 0 20px;
+  padding: 0 12px;
   border-radius: 4px;
-  box-shadow: rgba(0, 0, 0, 0.5) 2px 2px 0px;
+  box-shadow: rgba(0, 0, 0, 0.5) 2px 2px 0;
   font-size: 22px;
   height: 55px;
   font-weight: bold;
@@ -74,8 +77,8 @@ footer {
 
 .task {
   border: 2px solid black;
-  margin: 40px 0px 20px;
-  padding: 0px 12px;
+  margin: 40px 0 20px;
+  padding: 0 12px;
   border-radius: 4px;
   text-align: center;
   font-size: 22px;
@@ -84,7 +87,7 @@ footer {
   background-color: rgba(230, 230, 230, 0.5);
 }
 
-.control-buttons{
+.control-buttons {
   flex-direction: row;
 }
 
@@ -92,22 +95,39 @@ footer {
   display: inline-block;
 }
 
-.sidebar {
-}
+.sidebar {}
 
-/* Styling for modal*/
+/* Styling for modal */
 .modal {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
-  padding-top: 100px; /* Location of the box */
+  display: none;
+
+  /* Hidden by default */
+  position: fixed;
+
+  /* Stay in place */
+  z-index: 1;
+
+  /* Sit on top */
+  padding-top: 100px;
+
+  /* Location of the box */
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%;
+
+  /* Full width */
+  height: 100%;
+
+  /* Full height */
+  overflow: auto;
+
+  /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0);
+
+  /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4);
+
+  /* Black w/ opacity */
 }
 
 /* Modal Content */
@@ -122,7 +142,7 @@ footer {
 
 /* The Close Button */
 .close {
-  color: #aaaaaa;
+  color: #aaa;
   float: right;
   font-size: 28px;
   font-weight: bold;
@@ -145,7 +165,7 @@ footer {
 
 #confirm-button,
 #cancel-button {
-  margin: 0px 20px;
+  margin: 0 20px;
   border-radius: 4px;
   height: 35px;
   font-weight: bold;
