--- a/source/site/frontend/css/task-list.css
+++ b/source/site/frontend/css/task-list.css
@@ -1,16 +1,16 @@
 #task-list-header {
   color: white;
   text-align: center;
-  margin: 0px;
-  border: 0px;
-  padding: 0px;
+  margin: 0;
+  border: 0;
+  padding: 0;
   background-color: black;
   width: 100%;
 }
 
 .side-bar {
   position: absolute;
-  margin: 0px;
+  margin: 0;
   padding: 0%;
   background-color: rgb(88, 88, 88);
   position: fixed;
@@ -40,7 +40,7 @@
   flex-grow: 2;
 }
 
-.pomo-cancel-btn{
+.pomo-cancel-btn {
   text-align: center;
   margin: 1mm;
   border: 1mm;
@@ -50,7 +50,7 @@
   flex-grow: 1;
 }
 
-.pomo-edit-btn{
+.pomo-edit-btn {
   text-align: center;
   margin: 1mm;
   border: 1mm;
@@ -63,7 +63,7 @@
 .task-container {
   display: flex;
   border-style: solid;
-  border-color:white;
+  border-color: white;
   border-width: 2px;
   flex-direction: row;
   justify-content: center;
@@ -74,62 +74,58 @@
   transition: box-shadow 0.1s;
 }
 
-.task-container:hover{
+.task-container:hover {
   background-color: rgb(207, 207, 207);
-  box-shadow: 4px 3px 5px #000000;;
+  box-shadow: 4px 3px 5px #000;
 }
 
-.task-input-container{
-  display:flex;
+.task-input-container {
+  display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-.task-input{
-  text-align:center;
-  margin:1em;
+.task-input {
+  text-align: center;
+  margin: 1em;
   width: 80%;
 }
 
-.pomo-counter-input{
-  text-align:center;
-  margin:1em;
+.pomo-counter-input {
+  text-align: center;
+  margin: 1em;
   width: 80%;
-  
 }
 
-.task-input-btn-container{
+.task-input-btn-container {
   display: flex;
   flex-direction: row;
-  width:100%;
+  width: 100%;
 }
 
-.task-confirm-btn{
+.task-confirm-btn {
   width: 50%;
-  height:fit-content;
+  height: fit-content;
   font-size: medium;
 }
 
-.task-cancel-btn{
-  width:50%;
-  height:fit-content;
+.task-cancel-btn {
+  width: 50%;
+  height: fit-content;
   font-size: medium;
 }
 
-
-#pending{
+#pending {
   list-style: none;
 }
 
-#finished{
+#finished {
   list-style: none;
 }
-
-
 
 #fold-button {
-  margin: 0px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   width: fit-content;
   height: 10%;
   position: absolute;
@@ -141,10 +137,10 @@
   width: 100%;
   height: 5%;
   position: relative;
-  left: 0px;
+  left: 0;
   top: auto;
   margin: 2mm;
-  padding: 0px;
+  padding: 0;
 }
 
 .task-list-button {
@@ -156,4 +152,3 @@
   opacity: 100;
   background-color: white;
 }
-
