--- a/source/site/frontend/css/time-picker.css
+++ b/source/site/frontend/css/time-picker.css
@@ -10,24 +10,28 @@
   font-size: 12px;
   font-family: Arial, sans-serif;
 }
+
 .irs-line {
   position: relative;
   display: block;
   overflow: hidden;
   outline: none !important;
 }
+
 .irs-shadow {
   position: absolute;
   display: none;
   left: 0;
   width: 0;
 }
+
 .irs-bar {
   position: absolute;
   display: block;
   left: 0;
   width: 0;
 }
+
 .irs-handle {
   position: absolute;
   display: block;
@@ -35,21 +39,26 @@
   cursor: default;
   z-index: 1;
 }
+
 .irs-handle.type_last {
   z-index: 2;
 }
+
 .irs-min,
 .irs-max {
   position: absolute;
   display: block;
   cursor: default;
 }
+
 .irs-min {
   left: 0;
 }
+
 .irs-max {
   right: 0;
 }
+
 .irs-from,
 .irs-to,
 .irs-single {
@@ -60,6 +69,7 @@
   cursor: default;
   white-space: nowrap;
 }
+
 .irs-grid {
   position: absolute;
   display: none;
@@ -68,9 +78,11 @@
   width: 100%;
   height: 20px;
 }
+
 .irs-with-grid .irs-grid {
   display: block;
 }
+
 .irs-grid-pol {
   position: absolute;
   top: 0;
@@ -79,9 +91,11 @@
   height: 8px;
   background: #000;
 }
+
 .irs-grid-pol.small {
   height: 4px;
 }
+
 .irs-grid-text {
   position: absolute;
   bottom: 0;
@@ -93,6 +107,7 @@
   padding: 0 3px;
   color: #000;
 }
+
 .irs-disable-mask {
   position: absolute;
   display: block;
@@ -104,14 +119,17 @@
   background: rgba(0, 0, 0, 0);
   z-index: 2;
 }
+
 .lt-ie9 .irs-disable-mask {
   background: #000;
   filter: alpha(opacity=0);
   cursor: not-allowed;
 }
+
 .irs-disabled {
   opacity: 0.4;
 }
+
 .irs-hidden-input {
   position: absolute !important;
   display: block !important;
@@ -130,37 +148,45 @@
   border-style: solid !important;
   border-color: transparent !important;
 }
+
 .irs--flat {
   height: 40px;
 }
+
 .irs--flat.irs-with-grid {
   height: 60px;
 }
+
 .irs--flat .irs-line {
   top: 25px;
   height: 12px;
   background-color: #dee5eb;
   border-radius: 4px;
 }
+
 .irs--flat .irs-bar {
   top: 25px;
   height: 12px;
   background-color: #485ed2;
 }
+
 .irs--flat .irs-bar--single {
   border-radius: 4px 0 0 4px;
 }
+
 .irs--flat .irs-shadow {
   height: 1px;
   bottom: 16px;
   background-color: #dee5eb;
 }
+
 .irs--flat .irs-handle {
   top: 22px;
   width: 16px;
   height: 18px;
   background-color: transparent;
 }
+
 .irs--flat .irs-handle > i:first-child {
   position: absolute;
   display: block;
@@ -172,10 +198,12 @@
   border-radius: 1px;
   background-color: #3243a9;
 }
+
 .irs--flat .irs-handle.state_hover > i:first-child,
 .irs--flat .irs-handle:hover > i:first-child {
   background-color: #5783f4;
 }
+
 .irs--flat .irs-min,
 .irs--flat .irs-max {
   top: 0;
@@ -187,6 +215,7 @@
   background-color: #dee5eb;
   border-radius: 4px;
 }
+
 .irs--flat .irs-from,
 .irs--flat .irs-to,
 .irs--flat .irs-single {
@@ -198,9 +227,10 @@
   background-color: #485ed2;
   border-radius: 4px;
 }
-.irs--flat .irs-from:before,
-.irs--flat .irs-to:before,
-.irs--flat .irs-single:before {
+
+.irs--flat .irs-from::before,
+.irs--flat .irs-to::before,
+.irs--flat .irs-single::before {
   position: absolute;
   display: block;
   content: "";
@@ -213,9 +243,11 @@
   border: 3px solid transparent;
   border-top-color: #485ed2;
 }
+
 .irs--flat .irs-grid-pol {
   background-color: #dee5eb;
 }
+
 .irs--flat .irs-grid-text {
   color: #5d687d;
 }
