add two buttons for testing move_task

--- a/source/site/frontend/html/components/task-list.html
+++ b/source/site/frontend/html/components/task-list.html
@@ -21,4 +21,7 @@
         Extend
     </button>
     <button type="button" id="add-task-button">+</button>
+     <button type="button" id = "testMoving0">Test move_task 0</button>
+     <button type="button" id = "testMoving1">Test move_task 1</button>
+     <p id="curr_task_information"> There is no task in running.</p>
 </div>
