--- a/source/site/frontend/html/components/task-list.html
+++ b/source/site/frontend/html/components/task-list.html
@@ -1,26 +1,32 @@
 <link rel="stylesheet" href="/css/task-list.css" />
 <div class="side-bar" id="side-bar">
-    <h2 class="side-bar-header" id="task-list-header">Task list</h2>
+    <h2 class="side-bar-header" id="task-list-header">Task List</h2>
 
-    <h3>Running Task:</h3>
-    <ul class="side-bar-division" id="running">
+    <div class="task-list-separator">
+        <h3>Running Task:</h3>
+        <ul class="side-bar-division" id="running">
 
-    </ul>
-    <h3>Pending Tasks:</h3>
-    <ul class="side-bar-division" id="pending">
-
-    </ul>
-    <h3>Finished Tasks:</h3>
-    <ul class='side-bar-division' id='finished'>
-
-    </ul>
-    <ul class="side-bar-division" id="finished"></ul>
-
-
+        </ul>
+    </div>
+    <div class="task-list-separator">
+        <h3>Pending Tasks:</h3>
+        <ul class="side-bar-division" id="pending">
+    
+        </ul>
+    </div>
+    <div class="task-list-separator">
+        <h3>Finished Tasks:</h3>
+        <ul class='side-bar-division' id='finished'>
+    
+        </ul>
+    </div>
+    <!-- Is this repeated? 
+        <ul class="side-bar-division" id="finished"></ul> 
+    -->
     <button type="button" id="fold-button" onclick="state_transition(timer_init == window.current_state ? 'timer_toggle_task_list' : 'timer_init')">
         Extend
     </button>
-    <button type="button" id="add-task-button">+</button>
+    <button type="button" id="add-task-button">Add Task</button>
      <button type="button" id = "testMoving0">Test move_task 0</button>
      <button type="button" id = "testMoving1">Test move_task 1</button>
      <p id="curr_task_information"> There is no task in running.</p>
