added cycle start and ends reactions

--- a/source/site/frontend/html/components/task-list.html
+++ b/source/site/frontend/html/components/task-list.html
@@ -19,7 +19,7 @@
     <button type="button" id="fold-button" onclick="state_transition(timer_init == window.current_state ? 'timer_toggle_task_list' : 'timer_init')">
         Extend
     </button>
-     <button type="button" id = "testMoving0">Test move_task 0</button>
-     <button type="button" id = "testMoving1">Test move_task 1</button>
-     <p id="curr_task_information"> There is no task in running.</p>
+    <button type="button" id = "test-btn-0">Simulate cycle start</button>
+    <button type="button" id = "test-btn-1">Simulate cycle finish</button>
+    <p id="curr_task_information"> There is no task in running.</p>
 </div>
