--- a/source/site/frontend/css/task-list.css
+++ b/source/site/frontend/css/task-list.css
@@ -1,39 +1,23 @@
 #task-list-header {
-  color: rgb(0, 0, 0);
+  color: white;
   text-align: center;
-  /* border-radius: 5px; */
   margin: 0;
   border: 0;
-  padding: 10px;
-  /* background-color: black; */
+  padding: 0;
+  background-color: black;
   width: 100%;
 }
 
-h3 {
-  margin-left: 2%;
-  margin-block-start: 1%;
-}
-
 .side-bar {
-  display: flex;
-  flex-direction: column;
   position: absolute;
-  z-index: 1;
   margin: 0;
   padding: 0%;
-  border-radius: 5px;
-  background-color: rgba(255, 255, 255, 0.5);
-  backdrop-filter: blur(30px);
+  background-color: rgb(88, 88, 88);
+  position: fixed;
   height: 95%;
   width: 40%;
   left: 100%;
   transition: left 0.5s;
-}
-
-.task-list-separator {
-  margin: 5px;
-  border: 1px solid black;
-  border-radius: 5px;
 }
 
 .task {
@@ -150,8 +134,7 @@ h3 {
 }
 
 #add-task-button {
-  align-self: center;
-  width: 80%;
+  width: 100%;
   height: 5%;
   position: relative;
   left: 0;
