--- a/source/site/frontend/html/components/task-list.html
+++ b/source/site/frontend/html/components/task-list.html
@@ -24,7 +24,7 @@
         <ul class="side-bar-division" id="finished"></ul> 
     -->
     <button type="button" id="fold-button" onclick="state_transition(timer_init == window.current_state ? 'timer_toggle_task_list' : 'timer_init')">
-        Extend
+        &lsaquo;
     </button>
     <button type="button" id="add-task-button">Add Task</button>
      <button type="button" id = "testMoving0">Test move_task 0</button>
