generalize state machine

--- a/source/site/frontend/html/components/task-list.html
+++ b/source/site/frontend/html/components/task-list.html
@@ -14,7 +14,7 @@
   <button
     type="button"
     id="fold-button"
-    onclick="state_transition(timer_init == window.current_state ? 'timer_toggle_task_list' : 'timer_init')"
+    onclick="window.current_state = transition(window.current_state, timer_init == window.current_state ? 'timer_toggle_task_list' : 'timer_init')"
   >
     Extend
   </button>
